--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "rm -rf dist && npx tsc",
+    "dev": "vite",
+    "build": "npx tsc -b && vite build",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
