--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "npx tsc -b && vite build",
+    "build": "vite build",  
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
