--- a/guesthub/package.json
+++ b/guesthub/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "axios": "^1.11.0",
